--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "math.h": "c",
         "user.h": "c",
         "stat.h": "c",
-        "types.h": "c"
+        "types.h": "c",
+        "syscall.h": "c"
     }
 }
