--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "user.h": "c",
         "stat.h": "c",
         "types.h": "c",
-        "syscall.h": "c"
+        "syscall.h": "c",
+        "new": "c"
     }
 }
