--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "stat.h": "c",
         "types.h": "c",
         "syscall.h": "c",
-        "new": "c"
+        "new": "c",
+        "cstdio": "c",
+        "param.h": "c"
     }
 }
